; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/usb/tm6000/extr_tm6000-video.c_tm6000_free_urb_buffers.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/usb/tm6000/extr_tm6000-video.c_tm6000_free_urb_buffers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tm6000_core = type { i32**, i32**, i32, i32 }

@TM6000_NUM_URB_BUF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tm6000_core*)* @tm6000_free_urb_buffers to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tm6000_free_urb_buffers(%struct.tm6000_core* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.tm6000_core*, align 8
  %4 = alloca i32, align 4
  store %struct.tm6000_core* %0, %struct.tm6000_core** %3, align 8
  %5 = load %struct.tm6000_core*, %struct.tm6000_core** %3, align 8
  %6 = getelementptr inbounds %struct.tm6000_core, %struct.tm6000_core* %5, i32 0, i32 1
  %7 = load i32**, i32*** %6, align 8
  %8 = icmp ne i32** %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %69

10:                                               ; preds = %1
  store i32 0, i32* %4, align 4
  br label %11

11:                                               ; preds = %53, %10
  %12 = load i32, i32* %4, align 4
  %13 = load i32, i32* @TM6000_NUM_URB_BUF, align 4
  %14 = icmp slt i32 %12, %13
  br i1 %14, label %15, label %56

15:                                               ; preds = %11
  %16 = load %struct.tm6000_core*, %struct.tm6000_core** %3, align 8
  %17 = getelementptr inbounds %struct.tm6000_core, %struct.tm6000_core* %16, i32 0, i32 1
  %18 = load i32**, i32*** %17, align 8
  %19 = load i32, i32* %4, align 4
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds i32*, i32** %18, i64 %20
  %22 = load i32*, i32** %21, align 8
  %23 = icmp ne i32* %22, null
  br i1 %23, label %24, label %52

24:                                               ; preds = %15
  %25 = load %struct.tm6000_core*, %struct.tm6000_core** %3, align 8
  %26 = getelementptr inbounds %struct.tm6000_core, %struct.tm6000_core* %25, i32 0, i32 3
  %27 = load i32, i32* %26, align 4
  %28 = load %struct.tm6000_core*, %struct.tm6000_core** %3, align 8
  %29 = getelementptr inbounds %struct.tm6000_core, %struct.tm6000_core* %28, i32 0, i32 2
  %30 = load i32, i32* %29, align 8
  %31 = load %struct.tm6000_core*, %struct.tm6000_core** %3, align 8
  %32 = getelementptr inbounds %struct.tm6000_core, %struct.tm6000_core* %31, i32 0, i32 1
  %33 = load i32**, i32*** %32, align 8
  %34 = load i32, i32* %4, align 4
  %35 = sext i32 %34 to i64
  %36 = getelementptr inbounds i32*, i32** %33, i64 %35
  %37 = load i32*, i32** %36, align 8
  %38 = load %struct.tm6000_core*, %struct.tm6000_core** %3, align 8
  %39 = getelementptr inbounds %struct.tm6000_core, %struct.tm6000_core* %38, i32 0, i32 0
  %40 = load i32**, i32*** %39, align 8
  %41 = load i32, i32* %4, align 4
  %42 = sext i32 %41 to i64
  %43 = getelementptr inbounds i32*, i32** %40, i64 %42
  %44 = load i32*, i32** %43, align 8
  %45 = call i32 @usb_free_coherent(i32 %27, i32 %30, i32* %37, i32* %44)
  %46 = load %struct.tm6000_core*, %struct.tm6000_core** %3, align 8
  %47 = getelementptr inbounds %struct.tm6000_core, %struct.tm6000_core* %46, i32 0, i32 1
  %48 = load i32**, i32*** %47, align 8
  %49 = load i32, i32* %4, align 4
  %50 = sext i32 %49 to i64
  %51 = getelementptr inbounds i32*, i32** %48, i64 %50
  store i32* null, i32** %51, align 8
  br label %52

52:                                               ; preds = %24, %15
  br label %53

53:                                               ; preds = %52
  %54 = load i32, i32* %4, align 4
  %55 = add nsw i32 %54, 1
  store i32 %55, i32* %4, align 4
  br label %11

56:                                               ; preds = %11
  %57 = load %struct.tm6000_core*, %struct.tm6000_core** %3, align 8
  %58 = getelementptr inbounds %struct.tm6000_core, %struct.tm6000_core* %57, i32 0, i32 1
  %59 = load i32**, i32*** %58, align 8
  %60 = call i32 @kfree(i32** %59)
  %61 = load %struct.tm6000_core*, %struct.tm6000_core** %3, align 8
  %62 = getelementptr inbounds %struct.tm6000_core, %struct.tm6000_core* %61, i32 0, i32 0
  %63 = load i32**, i32*** %62, align 8
  %64 = call i32 @kfree(i32** %63)
  %65 = load %struct.tm6000_core*, %struct.tm6000_core** %3, align 8
  %66 = getelementptr inbounds %struct.tm6000_core, %struct.tm6000_core* %65, i32 0, i32 1
  store i32** null, i32*** %66, align 8
  %67 = load %struct.tm6000_core*, %struct.tm6000_core** %3, align 8
  %68 = getelementptr inbounds %struct.tm6000_core, %struct.tm6000_core* %67, i32 0, i32 0
  store i32** null, i32*** %68, align 8
  store i32 0, i32* %2, align 4
  br label %69

69:                                               ; preds = %56, %9
  %70 = load i32, i32* %2, align 4
  ret i32 %70
}

declare dso_local i32 @usb_free_coherent(i32, i32, i32*, i32*) #1

declare dso_local i32 @kfree(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
